# sdl3-example

./: .gitignore  CMakeLists.txt  Makefile  README.md
include/: app.h
lib/: CMakeLists.txt  app.cpp
src/: game.cpp  main.cpp
